# ai-crop-yield-prediction

./: app.py  package.json  pyproject.toml  readme.md  replit.md
data/: sample_agricultural_data.py
models/: crop_models.py
services/: recommendation_engine.py  weather_service.py
utils/: data_processor.py  multilingual.py
