[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "openai>=1.107.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.49.1",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.2",
]
